--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,31 +1,35 @@
-name: Build and Push Docker Image
+name: ExpressJS API CI pipeline
 
-on:
-  push:
-    branches:
-      - main  # Trigger the workflow on push to the main branch
+on: 
+  workflow_run:
+    workflows: ["build-test"]
+    types:
+      - completed
+permissions:
+  contents: read      # Read access to the repository contents
+  packages: write     # Write access to Docker Hub for pushing images
+
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  build:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu environment
-
+  release:
+    name: Docker & DockerHub repository
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # Check out the repository code
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Set up QEMU for multi-platform builds
-        uses: docker/setup-buildx-action@v2
-
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
-          context: .  # Build from the root of the repository
-          file: ./Dockerfile  # Path to the Dockerfile
-          push: true  # Push the image to Docker Hub
-          tags: givencingco/python:latest  # Specify your Docker Hub username and image name
+          context: .                  
+          push: true                  
+          tags: givencingco/nest-app:latest
